--- a/index.htm
+++ b/index.htm
@@ -74,8 +74,8 @@ Way of Salvation</b></strong></font></a>&nbsp;&nbsp;&nbsp;<font color="#0000FF" 
   <table border="0" width="800">
     <tbody>
       <tr>
-        <td width="125"><font color="#000000" face="ARIAL"><b><a href="walk/walk.htm"><img src="images/walking3.gif" alt="Walking" border="0" width="117" height="69"></a></b></font></td>
-        <td width="661"><a href="walk/walk.htm"><font color="#0000FF" face="ARIAL"><b>Walking
+        <td width="125"><font color="#000000" face="ARIAL"><b><a href="walk/index.htm"><img src="images/walking3.gif" alt="Walking" border="0" width="117" height="69"></a></b></font></td>
+        <td width="661"><a href="walk/index.htm"><font color="#0000FF" face="ARIAL"><b>Walking
           Thru The Bible.</b></font></a><font color="#000000" face="ARIAL"><b><span>&nbsp;</span>&nbsp;</b></font>
           <p><font color="#000000" face="ARIAL"><b>A series of Bible Class
           lessons and sermon outlines to go through the Bible in a one-year
@@ -91,8 +91,8 @@ Way of Salvation</b></strong></font></a>&nbsp;&nbsp;&nbsp;<font color="#0000FF" 
   <table border="0" width="758">
     <tbody>
       <tr>
-        <td width="745"><font color="#000000" face="ARIAL"><b><a href="RCOC%20-%20title.gif"><img src="images/redball.gif" width="14" height="14"></a><span>&nbsp;</span></b></font><font color="#0000FF" face="ARIAL"><b><a href="bbom/bbom_index.htm">Bible
-          Book of the Month</a></b></font><b><font color="#0000FF" face="ARIAL"><a href="https://windellgann.com/bbom/bbom_index.htm">&nbsp;</a></font><font color="#000000" face="ARIAL">&nbsp;&nbsp;
+        <td width="745"><font color="#000000" face="ARIAL"><b><a href="RCOC%20-%20title.gif"><img src="images/redball.gif" width="14" height="14"></a><span>&nbsp;</span></b></font><font color="#0000FF" face="ARIAL"><b><a href="bbom/index.htm">Bible
+          Book of the Month</a></b></font><b><font color="#0000FF" face="ARIAL"><a href="https://windellgann.com/bbom/index.htm">&nbsp;</a></font><font color="#000000" face="ARIAL">&nbsp;&nbsp;
           Bible Class Lesson Sheets -- and one of the most useful and practical
           plans for congregational Bible Study.&nbsp; Read about this plan and
           see some the material already posted.</font></b></td>
