--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@ Way of Salvation</b></strong></font></a>&nbsp;&nbsp;&nbsp;<font color="#0000FF" 
   <table border="0" width="829">
     <tbody>
       <tr>
-        <td width="121"><font color="#000000" face="ARIAL"><b><a href="survey/survey.htm"><img src="images/survey02.gif" alt="Bible Survey" width="167" height="108"></a></b></font></td>
+        <td width="121"><font color="#000000" face="ARIAL"><b><a href="survey/index.htm"><img src="images/survey02.gif" alt="Bible Survey" width="167" height="108"></a></b></font></td>
         <td width="691"><a href="survey/index.htm"><font color="#0000FF" face="ARIAL"><b>Bible
           Survey</b></font></a><font color="#000000" face="ARIAL"><b>&nbsp;&nbsp;
           Lessons surveying the Old and New Testaments. Lessons sheets and
@@ -261,3 +261,4 @@ Page of Rogersville Church of Christ</font></strong></p>
 </body>
 
 </html>
+
