--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,7 @@ can use --</marquee>
       <p>&nbsp;
     </div>
   </li>
-  <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: none; transition: background 0.2s;"><img src="https://windellganna.netlify.app/images/e-Sword%20icon.jpg" alt="e-Sword Modules" style="box-sizing: border-box; vertical-align: middle; float: left; border-style: none; margin-right: 15px" width="64" height="58"><a href="e-Sword%20Modules/e-Sword%20index.htm" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">e-Sword
+  <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: none; transition: background 0.2s;"><img src="images/e-Sword%20icon.jpg" alt="e-Sword Modules" style="box-sizing: border-box; vertical-align: middle; float: left; border-style: none; margin-right: 15px" width="64" height="58"><a href="e-Sword%20Modules/e-Sword%20index.htm" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">e-Sword
     Modules</a>
     <div class="description" style="box-sizing: border-box; color: rgb(68, 68, 68); margin-top: 0.3em; font-size: 0.95em;">
       Here you can download free modules for the PC, Mac, and iPad e-Sword Bible
@@ -226,3 +226,4 @@ Resources</h2>
 </body>
 
 </html>
+
