--- a/index.htm
+++ b/index.htm
@@ -107,7 +107,7 @@ can use --</marquee>
 <h2 style="box-sizing: border-box; margin-top: 0px; margin-bottom: 0.5rem; font-family: inherit; font-weight: 500; line-height: 1.2; color: inherit; font-size: 2rem;">Focused
 Studies</h2>
 <ul class="portfolio-links" style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; list-style: none; padding: 0px;">
-  <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: 1px solid rgb(236, 236, 236); transition: background 0.2s;"><a href="mount/index.htm" target="_parent"><img src="https://windellganna.netlify.app/images/mount.gif" alt="Sermon on the Mount" style="box-sizing: border-box; vertical-align: middle; float: left; border-style: none; margin-right: 15px" width="65" height="93"></a><a href="mount/index.hml" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">Studies
+  <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: 1px solid rgb(236, 236, 236); transition: background 0.2s;"><a href="mount/index.htm" target="_parent"><img src="images/mount.gif" alt="Sermon on the Mount" style="box-sizing: border-box; vertical-align: middle; float: left; border-style: none; margin-right: 15px" width="65" height="93"></a><a href="mount/index.hml" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">Studies
     in the Sermon on the Mount</a>
     <div class="description" style="box-sizing: border-box; color: rgb(68, 68, 68); margin-top: 0.3em; font-size: 0.95em;">
       Twenty-seven full content lesson outlines ready to be downloaded and
@@ -129,10 +129,10 @@ Studies</h2>
     <h2 style="box-sizing: border-box; margin-top: 0px; margin-bottom: 0.5rem; font-family: inherit; font-weight: 500; line-height: 1.2; color: inherit; font-size: 2rem;">College
     and Young Professional Courses</h2>
     <ul class="portfolio-links" style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; list-style: none; padding: 0px;">
-      <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: none; transition: background 0.2s;"><a href="hfiles/College-Song-of-Solomon.zip" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">Song
+      <li style="box-sizing: border-box; margin: 1rem 0px; padding: 1rem; border-bottom: none; transition: background 0.2s;"><a href="files/College-Song-of-Solomon.zip" target="_parent" style="box-sizing: border-box; color: rgb(0, 119, 204); text-decoration: none; background-color: transparent; font-weight: 500; font-size: 1.1em;">Song
         of Solomon Course</a>
         <div class="description" style="box-sizing: border-box; color: rgb(68, 68, 68); margin-top: 0.3em; font-size: 0.95em;">
-          4 PDFs in a ZIP file. A 3 or 4 week course on <i><b>Solomon's Song of Songs,
+          This downloads 4 PDFs in a ZIP file, which provides a 3 or 4 week course on <i><b>Solomon's Song of Songs,
           </b></i>designed for college age and young professionals.
         </div>
       </li>
@@ -226,4 +226,5 @@ Resources</h2>
 </body>
 
 </html>
+
 
