Changed Song of Solomon description.

--- a/index.htm
+++ b/index.htm
@@ -246,7 +246,7 @@
                         Song of Solomon Course
                     </a>
                     <div class="description">
-                        4 PDFs in a ZIP file.  A 13 week course on the Song of Solomon.  Designed for college age and young professionals.
+                        4 PDFs in a ZIP file.  32 page introduction and verse-by-verse study.  Designed for college age and young professionals.
                 </li>
             </ul>
         </section>
