Made changes outlined in envelope
made changes outlined on the printout in the envelope dropped off at my house.

--- a/index.htm
+++ b/index.htm
@@ -93,8 +93,8 @@
     <main>
         <ul class="portfolio-links">
             <li>
-                <img src="images/Bible Study Lesson Sheets.gif" alt="Bible Study Lesson Sheets" style="width:100px; float:left; margin-right:15px;">
                 <a href="lessons/index.htm" target="_blank" src="images/Bible%20Study%20Lesson%20Sheets.gif">
+                    <img src="images/Bible Study Lesson Sheets.gif" alt="Bible Study Lesson Sheets" style="width:100px; float:left; margin-right:15px;">
                     Bible Study Lesson Sheets
                 </a>
                 <div class="description">
@@ -102,8 +102,8 @@
                 </div>
             </li>
             <li>
-                <img src="images/survey02.gif" alt="Bible Survey" style="width:100px; float:left; margin-right:15px;">
-                <a href="/survey/" target="_blank">
+                <a href="survey/index.htm" target="_blank">
+                    <img src="images/survey02.gif" alt="Bible Survey" style="width:100px; float:left; margin-right:15px;">
                     Bible Survey
                 </a>
                 <div class="description">
@@ -111,17 +111,17 @@
                 </div>
             </li>
             <li>
-                <img src="images/walking3.gif" alt="Walking Through the Bible" style="width:100px; float:left; margin-right:15px;">
-                <a href="/walk/" target="_blank">
+                <a href="walk/index.htm" target="_blank">
+                    <img src="images/walking3.gif" alt="Walking Through the Bible" style="width:100px; float:left; margin-right:15px;">
                     Walking Through the Bible
                 </a>
                 <div class="description">
                     A series of Bible Class lessons and sermon outlines to go through the Bible in a one-year program.
                 </div>
             </li>
-            <li>
-                <img src="images/bbom.gif" alt="Bible Book of the Month" style="width:100px; float:left; margin-right:15px;">
-                <a href="/bbom/" target="_blank">
+            <li> 
+                <a href="bbom/index.htm" target="_blank">
+                    <img src="images/bbom.gif" alt="Bible Book of the Month" style="width:100px; float:left; margin-right:15px;">
                     Bible Book of the Month
                 </a>
                 <div class="description">
@@ -129,7 +129,7 @@
                 </div>
             </li>
             <li>
-                <a href="/sermons/" target="_blank">
+                <a href="sermons/index.htm" target="_blank">
                     Sermons, Outlines, and Studies
                 </a>
                 <div class="description">
@@ -137,7 +137,7 @@
                 </div>
             </li>
             <li>
-                <a href="/powerpoint/" target="_blank">
+                <a href="powerpoint/index.htm" target="_blank">
                     PowerPoint Sermons
                 </a>
                 <div class="description">
@@ -145,8 +145,8 @@
                 </div>
             </li>
             <li>
-                <img src="images/bible2.gif" alt="bible" style="width:100px; float:left; margin-right:15px;">
-                <a href="/zip_files/Gann Bible Commentary - pdf.zip" target="_blank">
+                <a href="zip_files/Gann Bible Commentary - pdf.zip" target="_blank">
+                    <img src="images/bible2.gif" alt="bible" style="width:100px; float:left; margin-right:15px;">
                     Gann's Bible Commentary
                 </a>
                 <div class="description">
@@ -154,8 +154,8 @@
                 </div>
             </li>
             <li>
-                <img src="images/e-Sword icon.jpg" alt="e-Sword Modules" style="width:100px; float:left; margin-right:15px;">
                 <a href="e-Sword Modules/e-Sword index.htm" target="_blank">
+                    <img src="images/e-Sword icon.jpg" alt="e-Sword Modules" style="width:100px; float:left; margin-right:15px;">
                     e-Sword Modules
                 </a>
                 <div class="description">
@@ -167,9 +167,22 @@
         <section>
             <h2>Focused Studies</h2>
             <ul class="portfolio-links">
+            <hr size="5">
+            <h4>College and Young Professional Courses</h4>
+            <ul class="portfolio-links">
                 <li>
-                    <img src="images/mount.gif" alt="Sermon on the Mount" style="width:100px; float:left; margin-right:15px;">
+                    <a href="files/College-Song-of-Solomon.zip" target="_blank">
+                        Song of Solomon Course
+                    </a>
+                    <div class="description">
+                        This is a 3 or 4 week special study on Solomon's Song of Songs. The download includes a 32 page Introduction and verse-by-verse study. There is a very important point made in the "Song" which is directly relative to this age group. This ZIP download contains 4 small PDF files.
+                    </div>
+                </li>
+            </ul>
+            <hr size="5">                
+                <li>
                     <a href="mount/index.htm" target="_blank">
+                        <img src="images/mount.gif" alt="Sermon on the Mount" style="width:100px; float:left; margin-right:15px;">
                         Studies in the Sermon on the Mount
                     </a>
                     <div class="description">
@@ -177,8 +190,8 @@
                     </div>  
                 </li>
                 <li>
-                    <img src="images/mark.jpg" alt="Gospel of Mark" style="width:50px; float:left; margin-right:15px;">
                     <a href="mark/" target="_blank">
+                        <img src="images/mark.jpg" alt="Gospel of Mark" style="width:50px; float:left; margin-right:15px;">
                         Studies in the Gospel of Mark
                     </a>
                     <div class="description">
@@ -219,7 +232,7 @@
                         PDF file of verse-by-verse notes on Revelation.  Good for studying the evidence for the "Early Date" 
                     </div>
                     <p align="center"><a href="https://www.youtube.com/watch?v=YBlO6OeaGjQ&t=14s"> Revelation Introduction and Overview Video </a></p>
-                    <p align="center"> <a href="sermons/Revelation_Notes_WG.pdf">Sermon Notes Handout</a></p>
+                    <p align="center"> <a href="files/Revelation-Handout.pdf">Overview Handout</a></p>
                 </li>
                 <li>
                     <a href="ridinger/dispensationalism.htm" target="_blank">
@@ -240,18 +253,6 @@
             </ul>
         </section>
         <section>
-            <h2>College and Young Professional Courses</h2>
-            <ul class="portfolio-links">
-                <li>
-                    <a href="files/College-Song-of-Solomon.zip" target="_blank">
-                        Song of Solomon Course
-                    </a>
-                    <div class="description">
-                        4 PDFs in a ZIP file.  32 page introduction and verse-by-verse study.  Designed for college age and young professionals.
-                </li>
-            </ul>
-        </section>
-        <section>
             <h2>More Resources</h2>
             <ul class="portfolio-links">
                 <li>
@@ -263,8 +264,8 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/RCOC - title.gif" alt="Rogersville Church of Christ" style="width:100px; float:left; margin-right:15px;">
                     <a href="https://www.rogersvillecoc.org/" target="_blank">
+                        <img src="images/RCOC - title.gif" alt="Rogersville Church of Christ" style="width:100px; float:left; margin-right:15px;">
                         Rogersville Church of Christ
                     </a>
                     <div class="description">
