--- a/lessons/index.htm
+++ b/lessons/index.htm
@@ -9,6 +9,7 @@
 </head><body>
 
 <p align="center"><b><font color="#800000" face="Grease" size="6">BIBLE STUDY LESSON SHEETS</font></b></p>
+<p><b>Back to the <a href="../index.htm">Home Page</a></b></p>
 <p><b><font face="Arial"><font color="#0000ff">Bible Study Lesson Sheets</font>
 --&nbsp; These are lessons designed for either a Bible Study class or for
 personal study of the Bible.&nbsp; There are  fill in the blank questions,
@@ -202,7 +203,6 @@ matching, true- false, questions on one chapter of the Bible.&nbsp; </font></b><
       <td width="70%" align="left"><font size="5">Lesson Sheets from<b>  <a href="revelation/revelation-index.htm">Revelation</a> </b></font></td>
     </tr>
   </tbody></table>
-<p><b>Back to the <a href="../index.htm">Resource
-Index</a></b></p>
+<p><b>Back to the <a href="../index.htm">Home Page</a></b></p>
 
 </center></div>/b></body></html>
