--- a/sermons/salvat.htm
+++ b/sermons/salvat.htm
@@ -44,7 +44,7 @@ color=#0000ff><STRONG>HOME PAGE</STRONG></FONT></a></P>
   eternal salvation unto all them that obey him." (Hebrews 5:8-9).</FONT> 
 </LI></UL>
 <P><FONT color=#0000ff>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT
 color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
 <HR>
 
@@ -64,7 +64,7 @@ color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
   <LI><FONT color=#0000ff>"At the times of this ignorance God winked at but now 
   commandeth all men everywhere to repent." (Acts 17:30). </FONT></LI></UL>
 <P><FONT color=#808000>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT 
 color=#808000>TOP</FONT></A><FONT color=#808000> of this Page.</FONT></P>
 <HR>
 
@@ -87,7 +87,7 @@ color=#808000>TOP</FONT></A><FONT color=#808000> of this Page.</FONT></P>
   <LI><FONT color=#0000ff>"Arise and be baptized and wash away thy sins calling 
   on the name of the Lord." (Acts 22:16). </FONT></LI></UL>
 <P><FONT color=#0000ff>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT 
 color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
 <HR>
 
@@ -112,7 +112,7 @@ color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
   <LI><FONT color=#0000ff>Jesus promised to build his church. (Matthew 16:18). 
   </FONT></LI></UL>
 <P><FONT color=#0000ff>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT 
 color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
 <HR>
 
@@ -144,7 +144,7 @@ NECESSARY</B></FONT></H5>
   <LI><FONT color=#0000ff>To be in Christ is to be in his body, the church. 
   </FONT></LI></UL>
 <P><FONT color=#0000ff>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT 
 color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
 <HR>
 
@@ -160,7 +160,7 @@ color=#0000ff>TOP</FONT></A><FONT color=#0000ff> of this Page.</FONT></P>
   <LI><FONT color=#0000ff>We are saved by faith that works through love. (James 
   2:14-26) </FONT></LI></UL>
 <P><FONT color=#0000ff>Return to the </FONT><A 
-href="http://home.hiwaay.net/~wgann/sermons/salvat.htm#top2"><FONT 
+href="salvat.htm#top2"><FONT 
 color=#0000ff><STRONG>Top </STRONG></FONT></A><FONT color=#0000ff>of this 
 page.</FONT></P>
 <P><FONT color=#0000ff><BR>Return to the </FONT><a href="../index.htm"><FONT 
