--- a/walk/index.htm
+++ b/walk/index.htm
@@ -14,6 +14,8 @@ content="text/html; charset=iso-8859-1">
 <h1><a name="top"><font color="#008000"><b>Walking Thru The Bible
 <img src="walking2.gif" align="middle" width="229" height="135"> </b></font></a></h1>
 
+<p><b>Back to the <a href="../index.htm">Home Page</a></b></p>
+
 <h3 align="center"><a name="top"><font color="#000000"><b>Resource
 Material</H3></CENTER></b></font></a></h3>
 
@@ -435,6 +437,7 @@ of the Program</font></a><font color="#000000"> </font></h4>
         src="yeldot.gif" width="14" height="14"> Return to the </font><font face="Times New Roman, Times, serif"><a
         href="#top"><font color="#000000">TOP</font></a><font
         color="#000000"> of this Page.</font></font> </strong></p>
+        <p><b>Back to the <a href="../index.htm">Home Page</a></b></p>
         <hr align="left" size="5">
         <h4 align="left"><font color="#000000">Please <img
         src="mailbox.gif" width="83" height="57"> </font><a
@@ -443,7 +446,7 @@ of the Program</font></a><font color="#000000"> </font></h4>
         </font></h4>
         <p align="left"><font color="#000000"><img
         src="redball.gif" width="14" height="14">See the </font><a
-        href="../index.htm"><font color="#000000">Rogersville
+        href="https://rogersvillecoc.org/"><font color="#000000">Rogersville
         Church of Christ </font></a><font color="#000000">home
         page. </font></p>
         <p align="left"><font color="#000000"><img
