--- a/sermons/index.htm
+++ b/sermons/index.htm
@@ -18,7 +18,7 @@
     Outlines &amp; Other Studies</font></b><font size="4" color="green"><br>
     <img src="bible.gif" width="114" height="111" align="MIDDLE" border="0"></font></h1>
     <h2 align="CENTER"><b><i>Sermons</i></b></h2>
-    <p align="CENTER"><a href="../index.htm"><b><font size="4">Press Here </font></b></a><b><font size="4">to
+    <p align="CENTER"><a href="/"><b><font size="4">Press Here </font></b></a><b><font size="4">to
       return to the menu page</font></b><font size="4">.</font></p>
     <blockquote>
       <h2 align="left"><img src="redball.gif" align="BOTTOM" border="0" width="14" height="14">
